--- a/client/src/components/form-components/Input.css
+++ b/client/src/components/form-components/Input.css
@@ -2,7 +2,7 @@ input {
     margin: 0.8rem 0 0.8rem 0;
     padding: 10px;
     border: none;
-    border: 2px solid white;
+    border: 2px solid rgb(109, 109, 109);
     border-radius: 5px;
     outline: none;
     background-color: transparent;
