add style for strength level span

--- a/client/src/components/form-components/PasswordStrengthIndicator.css
+++ b/client/src/components/form-components/PasswordStrengthIndicator.css
@@ -1,5 +1,12 @@
 .password-strength-indicator {
     padding: 5px 0 5px 0;
+    font-size: 14px;
+    color: gray;
+}
+
+.strength-label {
+    padding: 5px;
+    text-align: right;
 }
 
 .strength-bars {
@@ -23,8 +30,6 @@
 }
 
 .condition {
-    font-size: 14px;
-    color: gray;
     margin: 2px 0 2px 0;
 }
 
