--- a/client/src/components/form-components/SubmitButton.css
+++ b/client/src/components/form-components/SubmitButton.css
@@ -12,3 +12,8 @@ button {
 button:hover {
     background-color: rgb(248, 203, 0);
 }
+
+button:disabled{
+    cursor: not-allowed;
+    background-color: gray;
+}
