--- a/client/src/pages/SignUp.css
+++ b/client/src/pages/SignUp.css
@@ -40,3 +40,10 @@ h1 {
 .login-direct:hover {
     text-decoration: underline;
 }
+
+.error-message {
+    color: red;
+    text-align: center;
+    font-style: italic;
+    margin: 5px 0;
+}
