style confirming tick icon

--- a/client/src/pages/PasswordForgot.css
+++ b/client/src/pages/PasswordForgot.css
@@ -59,3 +59,17 @@ h1 {
 .forgot-password-direct:hover {
     text-decoration: underline;
 }
+
+.tick-icon {
+    width: 50px;
+    height: 50px;
+    background-color: greenyellow;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
