--- a/client/src/pages/PasswordForgot.css
+++ b/client/src/pages/PasswordForgot.css
@@ -37,13 +37,14 @@ h1 {
 .message-failed {
     text-align: center;
     font-style: italic;
-    margin: 5px 0;
 }
 .message-success {
     color: greenyellow;
+    margin-bottom: 1rem;
 }
 .message-failed {
     color: red;
+    margin: 5px 0;
 }
 
 .notice-forgot-password {
@@ -72,4 +73,19 @@ h1 {
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 1rem;
+}
+
+.back-to-login {
+    background-color: rgb(223, 182, 0);
+    padding: 0.8rem 0;
+    width: 100%;
+    font-size: 1rem;
+}
+.back-to-login:hover {
+    background-color: rgb(248, 203, 0);
+}
+
+.back-to-login-link {
+    text-decoration: none;
+    color: black;
 }
