--- a/client/src/pages/PasswordForgot.css
+++ b/client/src/pages/PasswordForgot.css
@@ -40,7 +40,7 @@ h1 {
 }
 .message-success {
     color: greenyellow;
-    margin-bottom: 1rem;
+    padding: 1rem 0;
 }
 .message-failed {
     color: red;
