--- a/client/src/pages/UserHome.css
+++ b/client/src/pages/UserHome.css
@@ -7,11 +7,26 @@
 
 .home-wrapper {
     background: #0a0a0a;
+    height: 100vh
+}
+
+.navbar {
+    height: 70px;
+    padding: 0 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.logout-button {
+    width: 100px;
+}
+
+.main-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh
 }
 
 .info-wrapper {
@@ -21,10 +36,6 @@
     padding: 2rem;
     border-radius: 10px;
     color: white;
-}
-
-button {
-    align-self: center;
 }
 
 .message-success,
