use css module to all components

--- a/client/src/components/auth-form-components/PasswordStrengthIndicator.module.css
+++ b/client/src/components/auth-form-components/PasswordStrengthIndicator.module.css
@@ -1,29 +1,29 @@
-.password-strength-indicator {
+.passwordStrengthIndicator {
     padding: 5px 0 5px 0;
     font-size: 14px;
     color: gray;
 }
 
-.strength-label {
+.strengthLabel {
     padding: 5px;
     text-align: right;
 }
 
-.strength-bars {
+.strengthBars {
     display: flex;
     width: 100%;
     gap: 5px;
     margin-bottom: 10px;
 }
 
-.strength-bar {
+.strengthBar {
     width: 100%;
     height: 10px;
     background-color: gray;
     transition: background-color 0.2s ease;
 }
 
-.conditions-list {
+.conditionsList {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -37,6 +37,6 @@
     color: green;
 }
 
-.strength-bar.active {
+.strengthBar.active {
     background-color: green;
 }
