--- a/client/src/pages/authentication/PasswordReset.module.css
+++ b/client/src/pages/authentication/PasswordReset.module.css
@@ -1,6 +1,5 @@
-.password-forgot-wrapper {
+.wrapper {
     background: #0a0a0a;
-    padding: 0 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11,12 +10,7 @@ h1 {
     color: rgb(248, 203, 0);
 }
 
-.password-forgot-notice {
-    text-align: center;
-    max-width: 400px;
-}
-
-.password-forgot-form {
+.formWrapper {
     background-color: #2d2d2d;
     padding: 2rem;
     border-radius: 10px;
@@ -27,51 +21,46 @@ h1 {
     align-items: center;
 }
 
-.password-forgot-form-input {
+.formInput {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.message-success,
-.message-failed {
+.messageSuccess,
+.messageFailed {
     text-align: center;
     font-style: italic;
-}
-.message-success {
-    color: greenyellow;
-    padding: 1rem 0;
-}
-.message-failed {
-    color: red;
     margin: 5px 0;
 }
-
-.notice-forgot-password {
-    margin: 8px 0 8px 0;
-    text-align: center;
-    font-size: 0.8rem;
+.messageSuccess {
+    color: greenyellow;
+}
+.messageFailed {
+    color: red;
 }
 
-.forgot-password-direct {
-    text-decoration: none;
-    color: rgb(248, 203, 0);
-}
-.forgot-password-direct:hover {
-    text-decoration: underline;
+.footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 1rem 0 1rem;
+    width: 100%;
 }
 
-.back-to-login {
+.backToLogin {
     background-color: rgb(223, 182, 0);
-    padding: 0.8rem 0;
+    margin-top: 1rem;
+    padding: 0.8rem ;
     width: 100%;
     font-size: 1rem;
 }
-.back-to-login:hover {
+.backToLogin:hover {
     background-color: rgb(248, 203, 0);
 }
 
-.back-to-login-link {
+.backToLoginLink {
     text-decoration: none;
     color: black;
 }
