--- a/client/src/components/auth-form-components/Input.module.css
+++ b/client/src/components/auth-form-components/Input.module.css
@@ -1,4 +1,4 @@
-input {
+.input {
     margin: 0.8rem 0 0.8rem 0;
     padding: 10px;
     border: none;
@@ -10,6 +10,6 @@ input {
     transition: background-color 0.2s ease-in-out;
 }
 
-input:focus {
+.input:focus {
     background-color: rgb(70, 70, 70);
 }
