--- a/client/src/pages/UserHome.module.css
+++ b/client/src/pages/UserHome.module.css
@@ -1,11 +1,11 @@
-.spinner-wrapper {
+.spinnerWrapper {
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.home-wrapper {
+.wrapper {
     background: #0a0a0a;
     height: 100vh
 }
@@ -18,18 +18,19 @@
     justify-content: flex-end;
 }
 
-.logout-button {
+.logoutButton {
     width: 100px;
 }
 
-.main-section {
+.mainSection {
+    height: calc(100vh - 70px);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.info-wrapper {
+.infoWrapper {
     display: flex;
     flex-direction: column;
     background-color: #2d2d2d;
@@ -38,15 +39,15 @@
     color: white;
 }
 
-.message-success,
-.message-failed {
+.messageSuccess,
+.messageFailed {
     text-align: center;
     font-style: italic;
     margin: 5px 0;
 }
-.message-success {
+.messageSuccess {
     color: greenyellow;
 }
-.message-failed {
+.messageFailed {
     color: red;
 }
