--- a/client/src/pages/authentication/EmailVerificationCode.module.css
+++ b/client/src/pages/authentication/EmailVerificationCode.module.css
@@ -1,5 +1,4 @@
-
-.container {
+.wrapper {
     min-height: 100vh;
     background: #0a0a0a;
     display: flex;
@@ -9,7 +8,7 @@
     padding: 0px 10px 0 10px;
 }
 
-.form-wrapper {
+.formContainer {
     color: white;
     padding:2rem 10px 2rem 10px;
     background-color: #2d2d2d;
@@ -25,22 +24,25 @@
     text-align: center;
 }
 
-.form-container {
+.formWrapper {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.input-container {
+.inputWrapper {
     display: flex;
     gap: 0.5rem;
     justify-content: center;
 }
 
-.input-field {
+.inputField {
     width: 1.6rem;
     height: 1.6rem;
+    margin: 0.8rem 0 0.8rem 0;
+    padding: 10px;
     text-align: center;
+    background-color: transparent;
     border: 1px solid #6b7280;
     border-radius: 0.375rem;
     color: var(--text-normal);
@@ -49,20 +51,20 @@
     transition: border-color 0.3s;
 }
 
-.input-field:focus {
+.inputField:focus {
     border-color: #fbbf24;
 }
 
-.message-success,
-.message-failed {
+.messageSuccess,
+.messageFailed {
     text-align: center;
     font-style: italic;
     margin: 5px 0;
 }
-.message-success {
+.messageSuccess {
     color: greenyellow;
 }
-.message-failed {
+.messageFailed {
     color: red;
 }
 
