--- a/client/src/pages/authentication/Login.module.css
+++ b/client/src/pages/authentication/Login.module.css
@@ -1,4 +1,11 @@
-.password-reset-wrapper {
+.spinnerWrapper {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.wrapper {
     background: #0a0a0a;
     display: flex;
     justify-content: center;
@@ -10,7 +17,7 @@ h1 {
     color: rgb(248, 203, 0);
 }
 
-.password-reset-form {
+.formWrapper {
     background-color: #2d2d2d;
     padding: 2rem;
     border-radius: 10px;
@@ -21,44 +28,35 @@ h1 {
     align-items: center;
 }
 
-.password-reset-form-input {
+.formInput {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.message-success,
-.message-failed {
+.messageSuccess,
+.messageFailed {
     text-align: center;
     font-style: italic;
     margin: 5px 0;
 }
-.message-success {
+.messageSuccess {
     color: greenyellow;
 }
-.message-failed {
+.messageFailed {
     color: red;
 }
 
-.footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 1rem;
+.noticeForgotPassword {
+    margin: 8px 0 8px 0;
+    text-align: center;
+    font-size: 0.8rem;
 }
 
-.back-to-login {
-    background-color: rgb(223, 182, 0);
-    padding: 0.8rem 0;
-    width: 100%;
-    font-size: 1rem;
-}
-.back-to-login:hover {
-    background-color: rgb(248, 203, 0);
-}
-
-.back-to-login-link {
+.forgotPasswordDirect {
     text-decoration: none;
-    color: black;
+    color: rgb(248, 203, 0);
+}
+.forgotPasswordDirect:hover {
+    text-decoration: underline;
 }
