--- a/client/src/pages/authentication/PasswordForgot.module.css
+++ b/client/src/pages/authentication/PasswordForgot.module.css
@@ -1,5 +1,6 @@
-.signup-wrapper {
+.wrapper {
     background: #0a0a0a;
+    padding: 0 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -10,7 +11,12 @@ h1 {
     color: rgb(248, 203, 0);
 }
 
-.signup-form {
+.description {
+    text-align: center;
+    max-width: 400px;
+}
+
+.formWrapper {
     background-color: #2d2d2d;
     padding: 2rem;
     border-radius: 10px;
@@ -21,35 +27,22 @@ h1 {
     align-items: center;
 }
 
-.signup-form-input {
+.formInput {
     display: flex;
     flex-direction: column;
     width: 100%;
 }
 
-.notice-already-have-account {
-    margin: 8px 0 8px 0;
-    text-align: center;
-    font-size: 0.8rem;
-}
-
-.login-direct {
-    text-decoration: none;
-    color: rgb(248, 203, 0);
-}
-.login-direct:hover {
-    text-decoration: underline;
-}
-
-.message-success,
-.message-failed {
+.messageSuccess,
+.messageFailed {
     text-align: center;
     font-style: italic;
-    margin: 5px 0;
 }
-.message-success {
+.messageSuccess {
     color: greenyellow;
+    padding: 1rem 0;
 }
-.message-failed {
+.messageFailed {
     color: red;
+    margin: 5px 0;
 }
