fix logout button

--- a/client/src/pages/UserHome.module.css
+++ b/client/src/pages/UserHome.module.css
@@ -20,6 +20,17 @@
 
 .logoutButton {
     width: 100px;
+    align-self: center;
+    padding:10px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: rgb(223, 182, 0);
+    transition: background-color 0.2s ease-in-out;
+}
+.logoutButton:hover {
+    background-color: rgb(248, 203, 0);
 }
 
 .mainSection {
