fix back to login button

--- a/client/src/pages/authentication/PasswordReset.module.css
+++ b/client/src/pages/authentication/PasswordReset.module.css
@@ -50,17 +50,17 @@ h1 {
 }
 
 .backToLogin {
-    background-color: rgb(223, 182, 0);
+    text-decoration: none;
+    text-align: center;
+    color: black;
     margin-top: 1rem;
-    padding: 0.8rem ;
-    width: 100%;
+    padding: 10px ;
+    width: 90%;
     font-size: 1rem;
+    border-radius: 5px;
+    background-color: rgb(223, 182, 0);
+    transition: background-color 0.2s ease-in-out;
 }
 .backToLogin:hover {
     background-color: rgb(248, 203, 0);
-}
-
-.backToLoginLink {
-    text-decoration: none;
-    color: black;
 }
