--- a/client/src/pages/protected-view/UserHome.module.css
+++ b/client/src/pages/protected-view/UserHome.module.css
@@ -11,30 +11,43 @@
 }
 
 .navbar {
-    height: 70px;
-    padding: 0 10px;
+    padding: 10px;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    gap: 10px;
 }
 
-.logoutButton {
+button {
     width: 100px;
-    align-self: center;
     padding:10px;
     border: none;
     outline: none;
     border-radius: 5px;
     cursor: pointer;
+}
+.logoutButton,
+.deleteButton {
+    background-color: rgb(168, 0, 0);
+    color: white;
+    transition: background-color 0.2s ease-in-out;
+}
+.logoutButton:hover,
+.deleteButton:hover {
+    background-color: rgb(197, 0, 0);
+}
+.roleButton,
+.editInfoButton {
     background-color: rgb(223, 182, 0);
     transition: background-color 0.2s ease-in-out;
 }
-.logoutButton:hover {
+.roleButton:hover,
+.editInfoButton:hover {
     background-color: rgb(248, 203, 0);
 }
 
 .mainSection {
-    height: calc(100vh - 70px);
     display: flex;
     flex-direction: column;
     justify-content: center;
