--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,12 @@ body {
     margin: 0;
     padding: 0;
 }
+
+button {
+    width: 100px;
+    padding:10px;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
